# hypricer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
catalog/: registry.toml
catalog/registry/: context.toml  hardware.toml  hyprland.toml  seiki.toml  system.toml  time.toml
catalog/static/apps/: apps_modern.md
docs/: ARCHITECTURE.md  CONCEPTS.md  DATA_FLOW.md  DEVELOPER_GUIDE.md  api-reference.md  architecture.md  installation.md  quick-ref.md  registry-manual.md  theme-developer-guide.md  troubleshooting.md  user-guide.md
profiles/: default_setup.toml  seiki.toml
src/: generator.rs  main.rs  registry.rs  schema.rs  structs.rs
test_env/catalog/: registry.toml
test_env/profiles/: test_setup.toml
test_env/themes/: modern_dark.toml
themes/modern_dark/: template.conf  theme.toml
themes/seiki/: template.conf  theme.toml
themes/seiki/components/: decoration.conf  dwindle.conf  keybinds.conf  startup.conf  variables.conf
themes/seiki/components/tunable/window/: peace.conf
themes/seiki/logic/: bar.rs  style.rs
