[package]
name = "hypr-rice-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.4", features = ["derive"] }
shellexpand = "3.0" # To handle "~/.config" paths
anyhow = "1.0"      # Easy error handling
